<resources>
    <string name="app_name">MQTT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_delete">删除</string>
    <string name="label_scenes_name">请输入场景名</string>
    <string name="label_add">添加</string>
    <string name="label_save">保存</string>
    <string name="label_edit">编辑</string>
    <string name="label_switch_on">开</string>
    <string name="label_linking">连接中...</string>
    <string name="label_link_fail">连接失败，点击重连</string>
    <string name="label_unlink">未连接设备</string>
    <string name="label_time">时间</string>
    <string name="label_level">level</string>
    <string name="label_level_control">调光控制</string>
    <string name="label_hua">hua</string>
    <string name="label_set">sat</string>
    <string name="label_execute">执行</string>
    <string name="label_device_add">添加设备</string>
    <string name="label_device_name">输入设备名称</string>
    <string name="label_device_place">摆放位置</string>
    <string name="label_next">下一步</string>
    <string name="title_device_name7place">设置设备名称及位置</string>
    <string name="toast_input_empty">输入不能为空</string>
    <string name="label_device_info">设备信息</string>
    <string name="label_setting">设置</string>
    <string name="label_cancel">取消</string>
    <string name="label_confirm">确认</string>
    <string name="label_name_input">输入设备名称</string>
    <string name="title_scenes">场景</string>
    <string name="title_scenes_edit">编辑场景</string>
    <string name="label_scenes_info">触发场景是执行以下动作</string>
    <string name="label_action_add">添加动作</string>
    <string name="title_scenes_add">添加场景</string>
    <string name="toast_save_success">保存成功</string>
    <string name="toast_add_device_first">请先添加设备</string>
    <string name="label_device_list_hint">前8个设备将会显示在首页，长按可以推动排序，操作完毕后记得保存！</string>
    <string name="label_scenes_list_hint">前4个场景将会显示在首页，点击编辑，长按可以推动排序，侧滑可以删除设备，操作完毕后记得保存！</string>
    <string name="toast_service_unlink">未连接到服务端</string>
    <string name="toast_device_notfound">未找到设备</string>
    <string name="label_all">全部</string>
    <string name="label_click_on">点击开启</string>
    <string name="label_click_off">点击关闭</string>
    <string name="label_device_add_fail">设备连接超时，是否重新连接</string>
    <string name="label_add_again">重新添加</string>
    <string name="label_device_adding">设备正在添加中,请耐心等待...</string>
    <string name="label_add_scenes">新建场景</string>
    <string name="label_add_device">添加设备</string>
    <string name="label_device_light2">二路开关</string>
    <string name="label_device_light3">三路开关</string>
    <string name="title_device_info">设备信息</string>
    <string name="label_device_company">厂家信息</string>
    <string name="label_device_info_mac">MAC地址</string>
    <string name="label_device_serial">序列号</string>
    <string name="label_device_model">设备型号</string>
    <string name="label_device_manager">设备管理</string>
    <string name="label_unonline">设备不在线</string>
    <string name="label_device_unsupport">未识别设备，暂不支持</string>
</resources>
