<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.person.commonlib.view.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rightText="编辑"
        app:showRight="true"
        app:titleText="@string/label_setting" />

    <com.zj.mqtt.view.MyItemView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_device_name" />

    <com.zj.mqtt.view.MyItemView
        android:id="@+id/item_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_device_place" />

    <com.zj.mqtt.view.MyItemView
        android:id="@+id/item_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:item_title="@string/label_device_info" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/btn_red2light"
        android:text="@string/label_delete"
        android:textColor="@drawable/text_white2light" />

</LinearLayout>