<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ScenesDetailActivity">

    <com.person.commonlib.view.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:rightText="@string/label_save"
        app:showRight="true"
        app:titleText="@string/title_scenes_edit" />


    <com.zj.mqtt.view.ClearEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/label_scenes_name" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divide_line"
        android:paddingBottom="@dimen/view_padding"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/view_padding"
        android:text="@string/label_scenes_info"
        android:textColor="@color/text_light_gray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/label_action_add"
        style="@style/btnAdd" />


</LinearLayout>