<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.device.DeviceNameActivity">

    <com.person.commonlib.view.HeaderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleText="@string/title_device_name7place" />


    <com.zj.mqtt.view.ClearEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:drawableRight="@mipmap/img_shut_down"
        android:hint="@string/label_device_name"
        android:maxLength="10"
        android:paddingLeft="@dimen/view_padding"
        android:paddingRight="@dimen/view_padding" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/divide_line"
        android:paddingBottom="@dimen/view_padding"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/view_padding"
        android:text="@string/label_device_place" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/label_next"
        style="@style/btnCommon" />

</LinearLayout>