<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/label_set" />

        <TextView
            android:id="@+id/tv_color_set"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="0" />

        <SeekBar
            android:id="@+id/sb_color_set"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxHeight="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:progressDrawable="@drawable/bg_gradient_white2blue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/label_hua" />

        <TextView
            android:id="@+id/tv_color_hua"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="0" />

        <SeekBar
            android:id="@+id/sb_color_hua"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxHeight="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:progressDrawable="@mipmap/sb_color_bg" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/label_time" />

        <TextView
            android:id="@+id/tv_color_time"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="0" />

        <SeekBar
            android:id="@+id/sb_color_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxHeight="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:progressDrawable="@drawable/bg_seekbar_white" />

    </LinearLayout>

</LinearLayout>
