<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="30dp"
        android:drawableTop="@drawable/btn_dim_switch"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_title"
        tools:text="@string/label_click_on" />


    <com.person.commonlib.view.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bgColor="@color/transparent"
        app:leftIcon="@mipmap/com_arrow_left_white_img"
        app:my_textColor="@color/white"
        app:rightIcon="@mipmap/setting_white_img"
        app:rightText="@string/label_setting"
        app:showDivide="true"
        app:showRight="true"
        app:titleText="设备操作界面" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:ellipsize="end"
                android:text="@string/label_level" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:src="@mipmap/device_dim_level_off"
                android:text="0" />

            <SeekBar
                android:id="@+id/sb_level_value"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxHeight="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progressDrawable="@drawable/bg_gradient_black2white" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:src="@mipmap/device_dim_level_on"
                android:text="0" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin">


            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:ellipsize="end"
                android:text="clu.300" />

            <TextView
                android:id="@+id/tv_level_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="0" />

            <SeekBar
                android:id="@+id/sb_level_time"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:maxHeight="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:progressDrawable="@drawable/bg_seekbar_white" />

        </LinearLayout>


    </LinearLayout>


</FrameLayout>